--- a/src/Filmstudion/wwwroot/index.html
+++ b/src/Filmstudion/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rovers on mars</title>
+    <title>Filmstudion</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -14,20 +14,47 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark  text-light" style="background-color: #000">
-            <a href="index.html" class="nav-link text-light">
-                <h1><i class="fas fa-film"></i> Filmstudion</h1>
-            </a>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar navbar-dark text-light" style="background-color: #000">
+            <div class="container">
+                <a href="index.html" class="navbar-brand nav-link text-light">
+                    <h1><i class="fas fa-film"></i> Filmstudion</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Lägg till film</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Hantera filmstudios</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Välj filmstudio
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropDownItems">
 
-            <ul class="navbar-nav flex-grow-1">
-                <li class="nav-item pl-5">
-                    
-                </li>
-            </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
-    <article>
 
+    <article>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-8 ">
+                    <ul id="StudioList">
+
+                    </ul>
+                </div>
+            </div>
+        </div>
 
     </article>
 
