js test classes added

--- a/src/Filmstudion/wwwroot/index.html
+++ b/src/Filmstudion/wwwroot/index.html
@@ -50,23 +50,21 @@
         <div class="container" id="WarningBox">
             <div class="row justify-content-center">
                 <div class="col-md-8 border border-warning mt-5 p-3 text-center">
-                   <h6 class="text-warning font-weight-bold" id="WarningText">Välj filmstudio för att se tillgängliga filmer</h6>
+                    <h6 class="text-warning font-weight-bold" id="WarningText">Välj filmstudio för att se vilka filmer som är tillgängliga</h6>
                 </div>
             </div>
         </div>
 
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-8 ">
-                    <ul id="StudioList">
+            <div class="row" id="MovieBox">
 
-                    </ul>
-                </div>
             </div>
         </div>
 
     </article>
 
+    <script src="js/filmstudio.js"></script>
+    <script src="js/movie.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
