--- a/src/Filmstudion/wwwroot/index.html
+++ b/src/Filmstudion/wwwroot/index.html
@@ -56,8 +56,17 @@
         </div>
 
         <div class="container">
-            <div class="row" id="MovieBox">
+            <div class="row">
+                <div class="col-8 mt-3">
+                    <ul class="list-group" id="MovieUl">
 
+
+                    </ul>
+                </div>
+
+                <div class="col-4 mt-3">
+
+                </div>
             </div>
         </div>
 
