--- a/src/Filmstudion/wwwroot/movie.html
+++ b/src/Filmstudion/wwwroot/movie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Filmstudion</title>
+    <title>film</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -46,37 +46,54 @@
         </nav>
     </header>
 
-    <article>
-        <div class="container" id="WarningBox">
-            <div class="row justify-content-center">
-                <div class="col-md-8 border border-warning mt-5 p-3 text-center">
-                    <h6 class="text-warning font-weight-bold" id="WarningText">Välj filmstudio för att se vilka filmer som är tillgängliga</h6>
+    <article id="article">
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Ändra max antal utlåningar</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="max-lending" class="col-form-label">Nytt antal max-utlåningar:</label>
+                                <input type="number" class="form-control" id="NewMaxLending">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Ångra</button>
+                        <button type="button" onclick="ChangeMaxLendings()" data-dismiss="modal" class="btn btn-primary">Spara ändring</button>
+                    </div>
                 </div>
             </div>
         </div>
+
 
         <div class="container">
             <div class="row">
-                <div class="col-9 mt-3">
-                    <h4 class="text-center show-later">Aktuella filmer</h4>
-                    <ul class="list-group" id="MovieUl">
+                <div class="col-8 mt-3" id="Movie">
 
 
-                    </ul>
                 </div>
 
-                <div class="col-3 mt-3">
-                    <h4 class="text-center show-later">Lånade filmer</h4>
-                    <ul class="list-group" id="LendedMovies">
+                <div class="col-4 mt-3">
+                    <ul class="list-group" id="Lenders">
                     </ul>
                 </div>
             </div>
         </div>
+
 
     </article>
 
     <script src="js/filmstudio.js"></script>
     <script src="js/movie.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/forMovieHtml.js"></script>
 </body>
 </html>
