--- a/src/Filmstudion/wwwroot/movie.html
+++ b/src/Filmstudion/wwwroot/movie.html
@@ -82,8 +82,9 @@
                 </div>
 
                 <div class="col-4 mt-3">
-                    <ul class="list-group" id="Lenders">
-                    </ul>
+                    <div id="available-box">
+                        <h5>Tillgänglighet</h5>
+                    </div>
                 </div>
             </div>
         </div>
